# nas-audio-detection

./: .gitignore  README.md  main.py  pyproject.toml
app/: facilities.py  geo.py  main.py  phraseology.py  utils.py
app/audio/: detection_quality.py  phonemes.py  phrase_tagger.py  processor.py  streaming_matcher.py  streaming_stability.py
app/callsign/: __init__.py  airlines.py  parse.py  transcript.py  trie.py
app/external_clients/: __init__.py  flightradar.py
data/: common_trie.json
scripts/: build_common_tries.py  build_facility_tries.py  build_nav_data.py  phonemize_phrase.py  reload_facilities.py  tag_fixture_audio.py
tests/: test_geo.py
tests/audio/: test_phoneme_trie.py  test_phonemes.py  test_phrase_tagger.py  test_processor.py  test_streaming_matcher.py  test_streaming_stability.py
tests/callsign/: test_callsign_detect_phrases.py
tests/external_clients/: test_flightradar.py
tests/facility/: test_lax_tower_callsign.py
